--- a/pipe/Makefile
+++ b/pipe/Makefile
@@ -1,4 +1,8 @@
 .PHONT: run.v1
 run.v1: ## run 'progen'
-	progen -v
+	@progen -v
+
+.PHONT: run.v1.dr
+run.v1.dr: ## DryRun 'progen'
+	@progen -v -dr
 
