--- a/skip/Makefile
+++ b/skip/Makefile
@@ -1,4 +1,15 @@
 .PHONT: run.v1
-run.v1: ## run 'progen'
-	progen -v -dr -f progen.yml -skip=^dirs$$ -skip=cmd.+
+run.v1: ## Run 'progen'
+	@mkdir -p out
+	@progen -v -awd=out -skip=^dirs$$ -skip=cmd.+ -f ../progen.yml
+	@ls -l out
+	@ls -l out/api
+
+.PHONT: run.v1.dr
+run.v1.dr: ## DryRun 'progen'
+	@progen -v -dr -f progen.yml -skip=^dirs$$ -skip=cmd.+
+
+.PHONT: clean
+clean: ## Clean
+	@rm -rf out
 
