add `fs` examples

--- a/args/pf/Makefile
+++ b/args/pf/Makefile
@@ -1,20 +1,22 @@
 .PHONT: run.pf
-run.pf: ## Run 'progen': -pf=true (default)
+run.pf: clean ## Run 'progen': -pf=true (default)
 	@mkdir -p out
 	@progen -v -awd=out -f ../progen.yml
 
-.PHONT: run.pf
+.PHONT: run.pf.dr
 run.pf.dr: ## DryRun 'progen': -pf=true (default)
-	@progen -v -dr -f progen.yml
+	@mkdir -p out
+	@progen -v -awd=out -dr -f ../progen.yml
 
 .PHONT: run.pf.false
-run.pf.false: ## Run 'progen': -pf=false
+run.pf.false: clean ## Run 'progen': -pf=false
 	@mkdir -p out
 	@progen -v -awd=out -pf=false -f ../progen.yml
 
 .PHONT:run.pf.false.dr
 run.pf.false.dr: ## Run 'progen': -pf=false
-	@progen -v -dr -pf=false -f progen.yml
+	@mkdir -p out
+	@progen -v -awd=out -dr -f ../progen.yml
 
 .PHONT: clean
 clean: ## Clean
