add `fs` example with `git --sparse`

--- a/config/fs/Makefile
+++ b/config/fs/Makefile
@@ -10,6 +10,10 @@ run.single: clean mkdir.out ## Run 'progen' with single 'fs'
 run.multiple: clean mkdir.out ## Run 'progen' with multiple 'fs'
 	@progen -v -awd=out -f ../multiple.yml
 
+.PHONT: run.sparse
+run.sparse: clean mkdir.out ## Run 'progen' use 'git' --sparse
+	@progen -v -awd=out -f ../sparse.yml
+
 .PHONT: copy
 copy: ## Copy assets
 	@mkdir -p out && cp -a assets/test_dir/. out/
