change `cmd` examples

--- a/args/skip/progen.yml
+++ b/args/skip/progen.yml
@@ -3,12 +3,15 @@ dirs0:
 dirs:
   - api/v1
 cmd:
-  - exec: [ chmod -R 777 api/v0 ]
+  - exec: chmod
+    args: [ -R, 777, api/v0 ]
 dirs1:
   - api/v2
 cmd1:
-  - exec: [ chmod -R 777 api/v2 ]
+  - exec: chmod
+    args: [ -R, 777, api/v2 ]
 dirs2:
   - api/v3
 cmd2:
-  - exec: [ chmod -R 777 api/v3 ]
+  - exec: chmod
+    args: [ -R, 777, api/v2 ]
