`-errstack` -> -errtrace` / `args` dir -> `flags` dir

--- a/flags/missingkey/Makefile
+++ b/flags/missingkey/Makefile
@@ -1,15 +1,15 @@
 .PHONT: run.invalid
-run.invalid: ## Run 'progen'
+run.invalid: ## Run cli
 	@mkdir -p out
 	@progen -v -missingkey=invalid -awd=out -f ../progen.yml
 
 .PHONT: run.default
-run.default: ## Run 'progen'
+run.default: ## Run cli
 	@mkdir -p out
 	@progen -v -awd=out -f ../progen.yml
 
 .PHONT: run.dr
-run.default.dr: ## DryRun 'progen'
+run.default.dr: ## DryRun cli
 	@progen -v -dr
 
 .PHONT: clean
