`progen.yml` -> `config.yml`

--- a/config/cmd/Makefile
+++ b/config/cmd/Makefile
@@ -1,8 +1,8 @@
 .PHONT: run
 run: ## run 'progen'
-	@progen -v
+	@progen -v -f config.yml
 
 .PHONT: run.dr
 run.dr: ## DryRun 'progen'
-	@progen -v -dr
+	@progen -v -dr -f config.yml
 
