--- a/flags/tvar/Makefile
+++ b/flags/tvar/Makefile
@@ -1,8 +1,8 @@
 .PHONT: run.tvar
 run.tvar: ## Run cli
-	@progen -v -tvar=.var1=V1 -tvar=.var2=V2
+	@progen -v -tvar=.var1=V1 -tvar=.var2=V2 -f config.yml
 
 .PHONT:run.tvar.dr
 run.tvar.dr: ## DryRun cli
-	@progen -v -dr -tvar=.var1=V1 -tvar=.var2=V2
+	@progen -v -dr -tvar=.var1=V1 -tvar=.var2=V2 -f config.yml
 
