--- a/flags/printconf/config.yml
+++ b/flags/printconf/config.yml
@@ -4,7 +4,7 @@ vars:
 # {{- $var_1 := random.AlphaNum 15}}
 #  {{- $var_2 := "echo some_%s"}}
 cmd:
-  - echo {{ $$var_1 }}
+  - echo {{ $var_1 }}
   - "{{ printf $var_2  `value` }}"
   - echo {{ .vars.some_data }}
 
