add `awd` example

--- a/flags/errtrace/Makefile
+++ b/flags/errtrace/Makefile
@@ -1,7 +1,7 @@
 .PHONT: run.without
 run.without: ## Run cli without `-errtrace` arg
-	@progen -v -awd=out -f ../config.yml
+	@progen -v -awd=out -f config.yml
 
 .PHONT: run.sparse
 run.with:  ## Run cli with `-errtrace` arg
-	@progen -v -errtrace -awd=out -f ../config.yml
+	@progen -errtrace -f config.yml
