--- a/flags/errtrace/config.yml
+++ b/flags/errtrace/config.yml
@@ -1,18 +1,4 @@
-var_d: VAR_d
-var_f: VAR_f
-
 cmd:
-  - exec: cp
-    args: [-a, ../assets/. , ../out/]
-    dir: .
-  - exec: tree
-    dir: .
-
-fs:
-  - test_dir
-  - test_dir_2
-
-cmd_finish:
-  - exec: tree
+  - exec: tree-xxx
     dir: .
 
